fix(fe/map_page): convert `.visible` and `.hidden` to BEM and fix `u-hidden`

--- a/assets/css/_map_page.scss
+++ b/assets/css/_map_page.scss
@@ -45,11 +45,11 @@ $map-page-search-panel-width: 24rem;
     margin: 0 1.5625rem;
   }
 
-  &.visible {
+  &--visible {
     left: 0;
   }
 
-  &.hidden {
+  &--hidden {
     left: calc(-1 * #{$map-page-search-panel-width} + 1rem);
 
     .m-search-display {
